formtastic buttons updated

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
       <p><abbr>*</abbr> <%= t("register.mandatoryFields") %></p>
     <% end %>
   
-    <%= f.buttons do %>
+    <%= f.actions do %>
       <%= f.submit t("register.signup") %>
     <% end %>
   <% end %>   
