--- a/app/views/meetups/_form.html.erb
+++ b/app/views/meetups/_form.html.erb
@@ -72,7 +72,7 @@
         <%= render :partial => "items/item_attachments", :locals => { :object => @meetup, :f => f } %>
       </div>
     </div>
-    <%= f.buttons do %>
+    <%= f.actions do %>
       <br />
       <%= f.submit t("save") %>
     <% end %>
@@ -125,7 +125,7 @@
         <%= render :partial => "items/item_attachments", :locals => { :object => @meetup, :f => f } %>
       </div>
     </div>
-    <%= f.buttons do %>
+    <%= f.actions do %>
       <br />
     <%= f.action :submit, :label => t("save") %>
     <% end %>
