--- a/app/views/userdetails/_form.html.erb
+++ b/app/views/userdetails/_form.html.erb
@@ -87,8 +87,7 @@
       </div>
     </div>
   </div>  
-  <%= form.buttons do %>
-    <br />
+  <%= form.actions do %>
     <%= form.submit t("save") %>
   <% end %>
 <% end %>
