--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -81,7 +81,7 @@
       <%= render :partial => "items/item_attachments", :locals => { :object => @group, :f => f } %>
     </div>
   </div>
-  <%= f.buttons do %>
-    <%= f.action :submit, :label => t("save") %>
+  <%= f.actions do %>
+    <%= f.submit t("save") %>
   <% end %>
 <% end %>
