--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -123,8 +123,8 @@
       <%= render :partial => "items/item_attachments", :locals => { :object => @item, :f => f } %>
     </div>
   </div>
-  <%= f.buttons do %>
-    <%= f.action :submit, :label => t("save") %>
+  <%= f.actions do %>
+    <%= f.submit t("save") %>
   <% end %>
   </div>
 <% end %>
