--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <%# stylesheet_link_tag "colorbox.css" %>
   <%= stylesheet_link_tag "gmaps4rails.css" %>
   <%= stylesheet_link_tag "themes/iwyg/jquery.ui.theme.css" %>
+	<link href="http://fonts.googleapis.com/css?family=Signika+Negative:600,400" rel="stylesheet" type="text/css">
   <%= stylesheet_link_tag "themes/iwyg/jquery-ui-1.8.11.custom.css" %>
   <%= stylesheet_link_tag "themes/iwyg/agents/#{users_browser}" if File.exist?("app/assets/stylesheets/themes/iwyg/agents/#{users_browser}.css") %>
 
