--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -6,8 +6,8 @@
       <%= f.input :email %>
     <% end %>
     
-    <%= f.buttons do %>
-      <%= f.submit t("send") %>
+    <%= f.actions do %>
+      <%= f.action :submit, :label => t("send").html_safe %>
     <% end %>
   <% end %>
   <%= render :partial => "devise/shared/links" %>
