--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -33,7 +33,7 @@
 				<%= f.input :email %>
 			<% end %>
 			<%= f.actions do %>
-			  <%= f.action :submit, :label => t("save") %>
+			  <%= f.action :submit, :label => t("save").html_safe %>
 			<% end %>	
 		<% end %>
 	</div>
