--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <%= stylesheet_link_tag "themes/iwyg/jquery-ui-1.8.11.custom.css" %>
   <%= stylesheet_link_tag "themes/iwyg/agents/#{users_browser}" if File.exist?("app/assets/stylesheets/themes/iwyg/agents/#{users_browser}.css") %>
 
-  <%= javascript_include_tag :application %>
+  <%= javascript_include_tag "application" %>
   <%= javascript_include_tag "jquery-ui.js" %>
   <%= javascript_include_tag "i18n/jquery-ui-i18n.js" %>
   <%= javascript_include_tag "rails.validations" %>
