--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,7 +11,7 @@
     <% end %>
   
     <%= f.actions do %>
-      <%= f.submit t("register.signup") %>
+      <%= f.action :submit, :label => t("register.signup"), :button_html => {:id => "submit"} %>
     <% end %>
   <% end %>   
   <%= render :partial => "devise/shared/links" %>
