--- a/app/assets/stylesheets/themes/iwyg/jquery-ui-1.8.11.custom.css
+++ b/app/assets/stylesheets/themes/iwyg/jquery-ui-1.8.11.custom.css
@@ -56,9 +56,9 @@
 
 /* Component containers
 ----------------------------------*/
-.ui-widget { font-family: Georgia; font-size: 1.1em; }
+.ui-widget { font-family: 'Signika Negative', sans-serif; font-size: 1.1em; }
 .ui-widget .ui-widget { font-size: 1em; }
-.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Georgia; font-size: 1em; }
+.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: 'Signika Negative', sans-serif; font-size: 1em; }
 .ui-widget-content { border: 1px solid #aaaaaa; background: #c1ccbd url(images/ui-bg_flat_75_c1ccbd_40x100.png) 50% 50% repeat-x; color: #222222; }
 .ui-widget-content a { color: #222222; }
 .ui-widget-header { border: 1px solid #d6daca; background: #9fc690 url(images/ui-bg_flat_75_9fc690_40x100.png) 50% 50% repeat-x; color: #555555; font-weight: bold; }
