--- a/app/assets/stylesheets/global/search.css
+++ b/app/assets/stylesheets/global/search.css
@@ -46,7 +46,6 @@
 }
 #search #searchextended table .label {
     vertical-align: top;
-    font-family: 'Georgia', serif;
     font-size:1.4em;
     color:white;
     text-shadow: 0 -1px 1px white;
@@ -59,6 +58,7 @@
 }
 #search #searchextended input,
 #search #searchextended select {
+		font-family: 'Signika Negative', sans-serif;
     font-size:1.0em;
 }
 #search #searchextended select {
@@ -93,15 +93,14 @@
     text-decoration:none;
 }
 
-
 #search input, 
 #search select {
+		font-family: 'Signika Negative', sans-serif;
     background:#EDEFDF none repeat scroll 0 0;
     color:#4d514a;
     font-size:120%;
-    font-family:"Georgia", serif;
-
 }
+
 #search input {
     padding-left:3px;
 }
