startpage text changed

--- a/app/views/page/index.de.html.erb
+++ b/app/views/page/index.de.html.erb
@@ -5,6 +5,27 @@
       <b>iwyg</b> - Das soziale "Go Happy"-Netzwerk. Hier kannst Du machen, was Du gerne tust, f&uuml;r Dich und andere.
     </h2>
     <div class="box ui-corner-all">
+			<h3>
+				Hier geht es um dich:
+			</h3>
+			<ul>
+				<li>&raquo; was brauchst du?</li>
+				<li>&raquo; was möchtest du tun?</li>
+				<li>&raquo; was sind deine Träume und Wünsche?</li>
+			</ul>
+    <div class="box ui-corner-all">
+		</div>
+		  <h3>
+				Verbinden wir uns:
+			</h3>
+			<ul>
+				<li>&raquo; um zu helfen.</li>
+				<li>&raquo; um zu kreiren.</li>
+				<li>&raquo; um zu wachsen.</li>
+				<li>&raquo; um voneinander zu lernen.</li>
+			</ul>
+    </div>
+    <div class="box ui-corner-all">
       <cite>Der Geist wird reich durch das, was er empfängt, das Herz durch das, was es gibt.</cite>
     </div>
     <div class="right font-smaller">
