--- a/app/views/share/_avatar.html.erb
+++ b/app/views/share/_avatar.html.erb
@@ -1,5 +1,5 @@
 <% if user %>
-<div id="avatar" class="shadowed ui-corner-all"> 
+<div id="avatar"> 
   <span>
     <%= image_tag smallThumb(user) %>
   </span>
