--- a/app/views/layouts/userarea.html.erb
+++ b/app/views/layouts/userarea.html.erb
@@ -11,7 +11,11 @@
         &raquo; <%= link_to @active_menuitem_l1, @active_menuitem_l1_link %>
       <% end %>
       <% if @active_menuitem_l2 %>
-        &raquo; <%= link_to t("#{@active_menuitem_l2}.plural").html_safe, @active_menuitem_l2_link %>
+				<% if params[:controller] == "items" %>
+	        &raquo; <%= link_to t("#{@active_menuitem_l2}.plural").html_safe, @active_menuitem_l2_link %>
+				<% else %>	
+        	&raquo; <%= link_to t("#{@active_menuitem_l2}").html_safe, @active_menuitem_l2_link %>
+				<% end %>
       <% end %>
     </h1>
     <%  if logged_in? && @user.location %>
