--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h1><%= t("title.register") %></h1>
-<% semantic_form_for @user, :html => {:class => "formular shadowed ui-corner-all"} do |f| %>
+<%= semantic_form_for @user, :html => {:class => "formular shadowed ui-corner-all"} |f| do %>
   <%= f.error_messages %>
   <% f.inputs do %>
     <%= f.input :login, :label => t("register.label.login") %>
