--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -8,5 +8,5 @@
 <div class="messagebody ui-corner-all">
 <pre><%=h @message.body %></pre>
 </div>
-<%= render :partial => "sent/form" %>
+<%= render :partial => "sent/replyform" %>
 
