--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,12 @@
 <div class="registration">
   <h1><%= t("title.register") %></h1>
-  <%= semantic_form_for @user, :html => {:class => "formular shadowed ui-corner-all"} do |f| %>
+  <%= semantic_form_for @user, :html => {:class => "formular shadowed ui-corner-all"}, :validate => true do |f| %>
     <%= render "share/error_messages", :target => @user %>
     <%= f.inputs do %>
-      <%= f.input :login, :label => t("register.label.login") %>
-      <%= f.input :email, :label => t("register.label.email") %>
-      <%= f.input :password, :label => t("register.label.password"), :required => true %>
-      <%= f.input :password_confirmation, :label => t("register.label.confirmPassword"), :required => true %>
+      <%= f.input :login, :label => t("register.label.login"), :validate => true %>
+      <%= f.input :email, :label => t("register.label.email"), :validate => true %>
+      <%= f.input :password, :label => t("register.label.password"), :required => true, :validate => true %>
+      <%= f.input :password_confirmation, :label => t("register.label.confirmPassword"), :required => true, :validate => true %>
       <p><abbr>*</abbr> <%= t("register.mandatoryFields") %></p>
     <% end %>
   
