--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h1><%= t("title.register") %></h1>
-<%= semantic_form_for @user, :html => {:class => "formular shadowed ui-corner-all"} |f| do %>
+<%= semantic_form_for @user, :html => {:class => "formular shadowed ui-corner-all"}, :validate => true do |f| %>
   <%= f.error_messages %>
   <% f.inputs do %>
     <%= f.input :login, :label => t("register.label.login") %>
@@ -10,8 +10,8 @@
     <hr class="divider" />
   <% end %>
 
-  <% f.buttons do %>
-    <%= f.submit t("register.signup") %>
+  <% f.actions do %>
+    <%= f.action :submit, :label => t("register.signup") %>
   <% end %>
 
 
