--- a/app/views/messages/reply.js.erb
+++ b/app/views/messages/reply.js.erb
@@ -1,6 +1,9 @@
 <% if @message.errors.any? %>
-$('#message_errors').show();
-$('#message_errors').html("<%= escape_javascript(error_messages_for(@message).html_safe)%>");
+	$('#message_errors').show();
+	$('#message_errors').html("<%= escape_javascript(error_messages_for(@message).html_safe)%>");
+
+	<%= render :partial => "share/ujs/form_errors", :locals => { :object => @message, :type => "message" } %>
+<% else %>
+	$('#message_subject').attr('value', '');
+	$('#message_body').attr('value', '');
 <% end %>
-$('#message_subject').attr('value', '');
-$('#message_body').attr('value', '');
