--- a/app/views/sent/_replyform.html.erb
+++ b/app/views/sent/_replyform.html.erb
@@ -1,10 +1,11 @@
 <%= content_for :head do %>
   <script type="text/javascript">
     $(document).ready(function (){
-     // $('#message-form').railsAjaxValidation();
+			$('form[data-validate]').validate();
     });
   </script>
 <% end %>
+<h3><%= t("mailbox.reply") %></h3>
 <%= semantic_form_for @message, :as => "message", :url => { :action => "reply", :id => @message.id }, :validate => true, :remote => true do |f| %>
   <%= render "share/error_messages", :target => @message %>
 
@@ -12,13 +13,13 @@
   <%= f.inputs do %>
    <li>
       <% if params[:to] %>
-        <%= f.input :to, :label => t("mailbox.to"), :input_html => { :value => params[:to] }, :validate => true %>
+        <%= f.input :to, :label => t("mailbox.to"), :input_html => { :value => params[:to] }, :validate => true, :required => true %>
       <% else %>
-        <%= f.input :to, :label => t("mailbox.to"), :input_html => { :value => @author || params[:id] }, :validate => true %>
+        <%= f.input :to, :label => t("mailbox.to"), :input_html => { :value => @author || params[:id] }, :validate => true, :required => true %>
         <% end %>
     </li>
     <%= f.input :subject, :required => false, :label => t("mailbox.subject") %>
-    <%= f.input :body, :as => :text, :label => t("mailbox.body"), :validate => true  %>
+    <%= f.input :body, :as => :text, :label => t("mailbox.body"), :required => true, :validate => true, :input_html => { :value => "" } %>
   <% end %>
   <%= f.actions do %>
     <%= f.action :submit, :label => t("submit"), :button_html => { :class => "submit", :disable_with => "..." } %>
