--- a/app/views/devise/mailer/unlock_instructions.de.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.de.html.erb
@@ -9,6 +9,10 @@
 		<p>Entweder du selbst hast deinen Account deaktiviert oder jemand hat versucht dein Account zu hacken.</p>
 		<p>Klicke den untenstehenden Link, um deinen Account wieder zu aktivieren:</p>
 		<p><%= link_to 'Account aktivieren', unlock_url(@resource, :unlock_token => @resource.unlock_token) %>.</p>
+		<p><br /></p>
+		<p>Falls der Link nicht funktioniert, kopiere diesen Link in deine Browserzeile:</p>
+		<p><%= link_to "#{unlock_url(@resource, :unlock_token => @resource.unlock_token)}", unlock_url(@resource, :unlock_token => @resource.unlock_token) %>.</p>
+		<p><br /></p>
 		<p>Dein IWYG Team</p>
   </body>
 </html>
