--- a/app/views/devise/mailer/unlock_instructions.en.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.en.html.erb
@@ -8,6 +8,10 @@
     <p>Your account has been deactivated by yourself or due to an excessive amount of unsuccessful sign in attempts.</p>
 		<p>Click the link below to unlock your account:</p>
 		<p><%= link_to 'Unlock my account', unlock_url(@resource, :unlock_token => @resource.unlock_token) %></p>
+		<p><br /></p>
+		<p>If the link is not working, copy this link into your address bar of your browser:</p>
+		<p><%= link_to "#{unlock_url(@resource, :unlock_token => @resource.unlock_token)}", unlock_url(@resource, :unlock_token => @resource.unlock_token) %>.</p>
+		<p><br /></p>
     <p>Yours IWYG Team</p>
   </body>
 </html>
