basic group specs added

--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -82,6 +82,6 @@
     </div>
   </div>
   <%= f.actions do %>
-    <%= f.action :submit, :label => t("save").html_safe %>
+    <%= f.action :submit, :label => t("save").html_safe, :button_html => { :id => "group-save" } %>
   <% end %>
 <% end %>
