--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,7 @@
 <% if @user %>
   <% if @user == current_user %>
     <div class="button new">
-      <%= link_to t("group.new"), new_user_group_path %>
+      <%= link_to t("group.new"), new_user_group_path, :id => "group-new" %>
     </div>
   <% end %>
 <% end %>             
