request specs for editing groups

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,22 +39,20 @@
   </script>
   
   <%= yield :head %>
-  
-  <script type="text/javascript">
-
-    /* Google Analytics */
-    
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-32738329-1']);
-    _gaq.push(['_trackPageview']);
-  
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
-  
+  <% unless Rails.env.test? %>
+		<script type="text/javascript">
+		  /* Google Analytics */
+		  var _gaq = _gaq || [];
+		  _gaq.push(['_setAccount', 'UA-32738329-1']);
+		  _gaq.push(['_trackPageview']);
+		
+		  (function() {
+		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		  })();
+		</script>
+  <% end %>
   <title><%= @title or t("iwyg.title") %></title>
 </head>
 <body>
