--- a/app/views/groups/_groupmenu.html.erb
+++ b/app/views/groups/_groupmenu.html.erb
@@ -1,8 +1,8 @@
 <% if logged_in? %>
   <ul class="font-smaller horizontal">
     <% if current_user == group.owner %>
-      <li class="button"><%= link_to t("edit").html_safe, edit_polymorphic_path([@user, group]) %></li>
-      <li class="button"><%= link_to t("delete").html_safe, group, :confirm => t("confirm_delete").html_safe, :method => :delete  %></li>
+      <li class="button"><%= link_to t("edit").html_safe, edit_polymorphic_path([@user, group]), :id => "group-edit" %></li>
+      <li class="button"><%= link_to t("delete").html_safe, group, :confirm => t("confirm_delete").html_safe, :method => :delete, :id => "group-delete"  %></li>
     <% else %>
 			<% if not current_user.following?(group) %>      
 				<li class="button"><%= link_to t("follow").html_safe, follow_group_path, :method => :put %></li>
