group_mailer specs

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -8,4 +8,11 @@
   <div id="content">
     <%=  yield %>
   </div>
+	<div id="greeting">
+		<br />
+    <br />
+    Dein
+    <br />
+    IWYG-Team
+	</div>
 </html>
