--- a/app/views/group_mailer/invitation.en.html.erb
+++ b/app/views/group_mailer/invitation.en.html.erb
@@ -1,6 +1,6 @@
 Hello <%= @g.user.login %>,
 <br />
-<%= @sender.login %> has invited you to join the group '<%= @group.title %>'.
+<%= @g.group.owner.login %> has invited you to join the group '<%= @group.title %>'.
 <br />
 <br />
 You can accept the invitation here:<br />
