--- a/app/views/group_mailer/quit_membership.de.html.erb
+++ b/app/views/group_mailer/quit_membership.de.html.erb
@@ -1,5 +1,5 @@
-Hallo <%= @group.owner.login %>,
+Hallo <%= @g.group.owner.login %>,
 <br />
-<%= @sender.login %> ist aus der Gruppe '<%= @group.title %>' ausgetreten.
+<%= @g.user.login %> ist aus der Gruppe '<%= @g.group.title %>' ausgetreten.
 <br />
 <br />
