--- a/app/views/group_mailer/quit_membership_by_owner.de.html.erb
+++ b/app/views/group_mailer/quit_membership_by_owner.de.html.erb
@@ -1,5 +1,5 @@
 Hallo <%= @g.user.login %>,
 <br />
-Du bist nicht mehr Mitglied der Gruppe '<%= @group.title %>'.
+Du bist nicht mehr Mitglied der Gruppe '<%= @g.group.title %>'.
 <br />
 <br />
