--- a/app/views/group_mailer/participation_aborted.de.html.erb
+++ b/app/views/group_mailer/participation_aborted.de.html.erb
@@ -1,5 +1,5 @@
 Hallo <%= @g.user.login %>,
 <br />
-<%= @sender.login %> hat deine Anfrage zur Teilnahme zur Gruppe '<%= @group.title %>' abgelehnt.
+<%= @g.group.owner.login %> hat deine Anfrage zur Teilnahme zur Gruppe '<%= @g.group.title %>' abgelehnt.
 <br />
 <br />
