--- a/app/views/group_mailer/quit_membership_by_owner.en.html.erb
+++ b/app/views/group_mailer/quit_membership_by_owner.en.html.erb
@@ -1,5 +1,5 @@
 Hello <%= @g.user.login %>,
 <br />
-You are not a member of the group '<%= @group.title %>' anymore.
+You are not a member of the group '<%= @g.group.title %>' anymore.
 <br />
 <br />
